--- a/ttl-caller/package.json
+++ b/ttl-caller/package.json
@@ -20,12 +20,14 @@
 		"dotenv": "^16.1.4",
 		"fetch-cookie": "^2.1.0",
 		"figlet": "^1.5.2",
-		"prompts": "^2.4.2"
+		"prompts": "^2.4.2",
+		"single-line-log": "^1.1.2"
 	},
 	"devDependencies": {
 		"@types/figlet": "^1.5.6",
 		"@types/node": "^18.11.18",
 		"@types/prompts": "^2.4.4",
+		"@types/single-line-log": "^1.1.0",
 		"@types/tough-cookie": "^4.0.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
